test/spec/i64.load64_s.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/i64.load64_s.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/i64.load64_s.fail.wast:1:52: unexpected token "i64.load64_s"
(module (memory 1) (func (param i32) (result i64) (i64.load64_s (get_local 0))))
                                                   ^^^^^^^^^^^^
out/third_party/testsuite/i64.load64_s.fail.wast:1:65: syntax error, unexpected (
(module (memory 1) (func (param i32) (result i64) (i64.load64_s (get_local 0))))
                                                                ^
;;; STDERR ;;)
